Add many updates

--- a/shark_attacks/Shark Attacks.ipynb
+++ b/shark_attacks/Shark Attacks.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -263,7 +263,7 @@
        "[5 rows x 24 columns]"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -277,6 +277,74 @@
     "\n",
     "# Check data load.\n",
     "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['usa', 'mexico', 'australia', 'new zealand', 'south africa',\n",
+       "       'bahamas', 'egypt', 'china', 'colombia', 'brazil', 'england',\n",
+       "       'thailand', 'costa rica', 'maldives', 'new caledonia', 'ecuador',\n",
+       "       'malaysia', 'libya', nan, 'cuba', 'mauritius', 'spain', 'samoa',\n",
+       "       'solomon islands', 'japan',\n",
+       "       'st helena, british overseas territory', 'comoros', 'reunion',\n",
+       "       'french polynesia', 'united kingdom', 'united arab emirates',\n",
+       "       'philippines', 'indonesia', 'columbia', 'cape verde', 'fiji',\n",
+       "       'dominican republic', 'cayman islands', 'aruba', 'mozambique',\n",
+       "       'puerto rico', 'italy', 'atlantic ocean', 'greece', 'st. martin',\n",
+       "       'france', 'papua new guinea', 'trinidad & tobago', 'kiribati',\n",
+       "       'israel', 'diego garcia', 'taiwan', 'jamaica',\n",
+       "       'palestinian territories', 'guam', 'seychelles', 'belize',\n",
+       "       'nigeria', 'tonga', 'scotland', 'canada', 'croatia',\n",
+       "       'saudi arabia', 'chile', 'antigua', 'kenya', 'russia',\n",
+       "       'turks & caicos', 'united arab emirates (uae)', 'azores',\n",
+       "       'south korea', 'malta', 'vietnam', 'madagascar', 'panama',\n",
+       "       'somalia', 'nevis', 'british virgin islands', 'norway', 'senegal',\n",
+       "       'yemen', 'gulf of aden', 'sierra leone', 'st. maartin',\n",
+       "       'grand cayman', 'liberia', 'vanuatu', 'honduras', 'venezuela',\n",
+       "       'sri lanka', 'uruguay', 'india', 'micronesia', 'caribbean sea',\n",
+       "       'okinawa', 'tanzania', 'marshall islands', 'egypt / israel',\n",
+       "       'northern arabian sea', 'hong kong', 'el salvador', 'angola',\n",
+       "       'bermuda', 'montenegro', 'iran', 'tunisia', 'namibia',\n",
+       "       'north atlantic ocean', 'portugal', 'south china sea',\n",
+       "       'bangladesh', 'palau', 'western samoa', 'pacific ocean',\n",
+       "       'british isles', 'grenada', 'iraq', 'turkey', 'singapore',\n",
+       "       'new britain', 'sudan', 'johnston island', 'south pacific ocean',\n",
+       "       'new guinea', 'red sea', 'north pacific ocean',\n",
+       "       'federated states of micronesia', 'mid atlantic ocean',\n",
+       "       'admiralty islands', 'british west indies', 'south atlantic ocean',\n",
+       "       'persian gulf', 'red sea / indian ocean', 'north sea', 'nicaragua',\n",
+       "       'maldive islands', 'american samoa', 'andaman / nicobar islandas',\n",
+       "       'gabon', 'mayotte', 'the balkans', 'sudan?', 'argentina',\n",
+       "       'martinique', 'indian ocean', 'guatemala', 'netherlands antilles',\n",
+       "       'northern mariana islands', 'iran / iraq', 'java',\n",
+       "       'central pacific', 'solomon islands / vanuatu',\n",
+       "       'southwest pacific ocean', 'bay of bengal', 'mid-pacifc ocean',\n",
+       "       'slovenia', 'curacao', 'iceland', 'italy / croatia', 'barbados',\n",
+       "       'monaco', 'guyana', 'haiti', 'san domingo', 'ireland', 'kuwait',\n",
+       "       'reunion island', 'falkland islands', 'crete', 'cyprus',\n",
+       "       'west indies', 'burma', 'lebanon', 'paraguay',\n",
+       "       'british new guinea', 'ceylon', 'ocean', 'georgia', 'syria',\n",
+       "       'tuvalu', 'indian ocean?', 'guinea', 'andaman islands',\n",
+       "       'equatorial guinea / cameroon', 'cook islands', 'tobago', 'peru',\n",
+       "       'africa', 'algeria', 'coast of africa', 'tasman sea', 'ghana',\n",
+       "       'greenland', 'mediterranean sea', 'sweden', 'roatan',\n",
+       "       'between portugal & india', 'djibouti', 'bahrein', 'korea',\n",
+       "       'red sea?', 'asia?', 'ceylon (sri lanka)'], dtype=object)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.Country.str.lower().unique()"
    ]
   },
   {
