--- a/Bayesian Updating.ipynb
+++ b/Bayesian Updating.ipynb
@@ -178,8 +178,9 @@
    ],
    "source": [
     "# Theta actually follows a normal distribution. Let's pull our value from that.\n",
-    "theta = truncated_normal(0.5, 1, 0, 1).rvs()\n",
-    "theta"
+    "# theta = truncated_normal(0.5, 1, 0, 1).rvs()\n",
+    "theta = 0.16546305924217014\n",
+    "theta "
    ]
   },
   {
